# Fuoten

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Fuoten.pro  Messages.sh  README.md  init.sh  releasel10n.sh  updatel10n.sh
.tx/: config
common/: CMakeLists.txt  common.pri  configuration.cpp  configuration.h  contextconfig.cpp  contextconfig.h  enums.h  globals.h  imagecache.cpp  imagecache.h  languagemodel.cpp  languagemodel.h  sqlitemanager.cpp  sqlitemanager.h  sqlitestoragehandler.cpp  sqlitestoragehandler.h  updateintervalmodel.cpp  updateintervalmodel.h  useravatar.cpp  useravatar.h
common/qml/common/models/: PrivacyPolicyModel.qml
common/qml/common/parts/: CachedImage.qml
kirigami/: kirigami.pro  qml.qrc
kirigami/qml/: CachedImage.qml  CountBubble.qml  FeedsPage.qml  FoldersPage.qml  LabeledTextField.qml  SettingsPage.qml  TextSwitch.qml  main.qml  navigation.js
kirigami/src/: main.cpp
rpm/: harbour-fuoten.changes  harbour-fuoten.spec  harbour-fuoten.yaml  sailfishos.changes  sailfishos.yaml
sailfishos/: CMakeLists.txt  createAppIcons.sh  harbour-fuoten.desktop  sailfishos.pro
sailfishos/icons/: CMakeLists.txt  createIcons.sh
sailfishos/icons/src/: createIcons.sh
sailfishos/qml/: CMakeLists.txt  harbour-fuoten.qml
sailfishos/qml/common/dialogs/: AccountSetup.qml  CreateFeedDialog.qml  CreateFolderDialog.qml  MoveFeedDialog.qml  RenameFeedDialog.qml  RenameFolderDialog.qml
sailfishos/qml/common/models/: ChangelogModel.qml  ContributorsModel.qml  LicensesModel.qml
sailfishos/qml/common/pages/: About.qml  ContextConfigPage.qml  MainViewSettings.qml  PrivacyPolicy.qml  Settings.qml  Sharing.qml  WipeManager.qml
sailfishos/qml/common/parts/: AccountItem.qml  CountBubble.qml  ErrorItem.qml  FoldersComboBox.qml  FontSizeSlider.qml  HideReadSwitch.qml  ListPageHeader.qml  RescalingRichText.qml  SortOrderSwitch.qml  SortingChoser.qml  SyncPanel.qml  WebViewMenuItem.qml
sailfishos/qml/common/wizard/: Account.qml  DeleteAccount.qml  DeleteAccountFinish.qml  LoginFlowCheck.qml  LoginFlowPolling.qml  LoginFlowSetup.qml  LoginManual.qml  LoginManualCheck.qml  Welcome.qml
sailfishos/qml/phone/cover/: CoverPage.qml
sailfishos/qml/phone/pages/: ArticlePage.qml  ArticlesListPage.qml  ArticlesListView.qml  BaseListView.qml  FeedListDelegate.qml  FeedsListPage.qml  FeedsListView.qml  FolderListView.qml  MainPage.qml  WebViewPage.qml
sailfishos/qml/tablet/cover/: CoverPage.qml
sailfishos/qml/tablet/pages/: MainPage.qml
sailfishos/src/: CMakeLists.txt  coverconnector.cpp  coverconnector.h  fuoteniconprovider.h  languagesmodel.cpp  languagesmodel.h  licensesmodel.cpp  licensesmodel.h  main.cpp  namfactory.cpp  namfactory.h  sfosconfig.cpp  sfosconfig.h  sfoscontextconfig.cpp  sfoscontextconfig.h  sfosmigrator.cpp  sfosmigrator.h  sfosnotificator.cpp  sfosnotificator.h  sfosuseravatar.cpp  sfosuseravatar.h  useragentmodel.cpp  useragentmodel.h
sailfishos/src/dbus/: CMakeLists.txt  fuotendbusadaptor.cpp  fuotendbusadaptor.h  fuotendbusproxy.cpp  fuotendbusproxy.h
sailfishos/src/sharing/: CMakeLists.txt  sharingmethod.cpp  sharingmethod.h  sharingmethod_p.h  sharingmethodsmodel.cpp  sharingmethodsmodel.h
sailfishos/translations/: CMakeLists.txt  fuoten.ts  fuoten_da.ts  fuoten_de.ts  fuoten_el.ts  fuoten_en_GB.ts  fuoten_en_US.ts  fuoten_fr.ts  fuoten_it.ts  fuoten_nl.ts  fuoten_sv.ts  fuoten_zh_CN.ts
translations/: fuoten.ts  fuoten_da.ts  fuoten_de.ts  fuoten_el.ts  fuoten_en_GB.ts  fuoten_en_US.ts  fuoten_fr.ts  fuoten_it.ts  fuoten_nl.ts  fuoten_sv.ts  fuoten_zh_CN.ts
